shifts/k8s-staging/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thshifts
    tier: api
  name: thshifts-depl
  namespace: thinkon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thshifts
      tier: api
  template:
    metadata:
      labels:
        app: thshifts
        tier: api
    spec:
      containers:
        - name: thshifts-nodejs
          image: thshifts-nodejs
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          ports:
            - containerPort: 8800
      imagePullSecrets:
        - name: registry
