shifts/k8s-staging/01-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thshifts
    tier: api
  name: thshifts-srv
  namespace: thinkon
spec:
  selector:
    app: thshifts
    tier: api
  ports:
    - name: thshifts-http
      protocol: TCP
      port: 8800
      targetPort: 8800
